--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,10 @@ blockquote {padding: 16px; background: #eee;}
 
 main{width:90%;background:#f4f4f4; margin:20px auto; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
-header{padding:6em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
-header > section {margin:2em; padding:2em; border:double 10px rgba(255,255,255,0.2)}
-header > section > div{background:#FFF;width:12em;height:12em;border-radius:50%; padding:1em 0 0 1em;}
-header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;}
+header{padding:6em 1em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
+header > section {margin:2em; padding:2em; border:solid 10px rgba(255,255,255,0.2)}
+header > section > div{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%; padding:1em 0 0 1em;}
+/* header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;} */
 
 /* .timelineCont:before{content:'';height:15px;width:15px;position:absolute; background:#e0e0e0;transform:rotate(45deg);left:92px;top:413px;z-index:9;} */
 
