--- a/css/styles.css
+++ b/css/styles.css
@@ -26,27 +26,24 @@ blockquote {padding: 16px; background: #eee;}
 
 main{width:90%;background:#f4f4f4; margin:20px auto; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
-header{padding:6em 1em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
-header > section {margin:2em; padding:2em; border:solid 10px rgba(255,255,255,0.2)}
+header{padding:2em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
+header > section {padding:2em; border:solid 1px rgba(255,255,255,0.2)}
 header > section > div{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%; padding:1em 0 0 1em;}
 /* header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;} */
 
-/* .timelineCont:before{content:'';height:15px;width:15px;position:absolute; background:#e0e0e0;transform:rotate(45deg);left:92px;top:413px;z-index:9;} */
-
 .timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 4em; /* 	padding:.7em 0 */}
-.timelineCont ul li{margin:.8em 4em .8em .8em ; padding: 1em; background:#FFF; border-radius: 5px;}
-.timelineCont ul li:before{content:'';height:15px;width:15px;border-radius:50%;background:#d4d4d4;border:2px solid #FFF;position:absolute;margin-left: -5.65em;box-shadow: 0 0 3px #fff;}
-.timelineCont ul li:hover{}
+.timelineCont ul li{margin:.8em 4em .8em .8em;padding:1em;background:#FFF;border-radius:5px; border: 1px solid #FFF;}
+.timelineCont ul li:before{content:'';height:15px;width:15px;border-radius:50%;background:#d4d4d4;border:2px solid #FFF;position:absolute;margin-left: -5.7em;box-shadow: 0 0 3px #fff;}
+.timelineCont ul li:hover{/* box-shadow:0 2px 4px 0 rgba(66, 100, 210, .2); background: rgba(66, 100, 210, .1) */}
 .timelineCont ul li:hover:before{background: #4264d2;}
 
-.timelineCont ul > li:first-child:before{visibility: hidden; display:none;}
-.timelineCont ul > li:first-child{margin:0em 4em .7em .7em ;background:transparent; padding:0 1em 1em 1em;}
+.timelineCont ul > li:first-child:before{visibility: hidden; display:none; }
+.timelineCont ul > li:first-child{margin:0em 4em .7em .7em ;background:transparent; padding:0 1em 1em 1em;border: none;}
 
 .timelineCont ul > li:last-child:before{visibility: hidden; display:none;}
-.timelineCont ul > li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;}
+.timelineCont ul > li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
 
 footer{height: 90px;background: #f4f4f4; border-top: 1px solid green;}
-/* footer:after{content:'';height:15px;width:15px;position:absolute; background:#e0e0e0;transform: rotate(45deg);left:92px;bottom:-340px;} */
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (max-width: 480px) {
