--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
 @import url("reset.css");
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans');
+
+/* USED FONT FAMILY  
+font-family: 'Comfortaa', cursive;
+font-family: 'Open Sans', sans-serif;
+ */
 
 /* A Linux- and Windoews-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
-body {font: 13px Helmet, Freesans, sans-serif; background:url(../images/overlay.png) #e8e9e9;}
+body {font: 13px 'Open Sans', sans-serif; background:url(../images/overlay.png) #e8e9e9;}
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
 /* We like off-black for text. */
@@ -9,8 +15,8 @@ body, select, input, textarea {color: #333;}
 a {color: #03f;}
 a:hover {color: #69f;}
 /* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;}
+::-moz-selection{background: #4264d2; color: #fff; text-shadow: none;}
+::selection {background: #4264d2; color: #fff; text-shadow: none;}
 
 /*	j.mp/webkit-tap-highlight-color */
 a:link {-webkit-tap-highlight-color: #fcd700;}
@@ -26,15 +32,18 @@ blockquote {padding: 16px; background: #eee;}
 
 main{width:90%;background:#f4f4f4; margin:20px auto; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
-header{padding:4em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
-header > section {padding:2em; border:solid 1px rgba(255,255,255,0.2)}
-header > section > div{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%; padding:1em 0 0 1em;}
+header{padding:6em 4em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
+header > section { text-align: left; }
+ header > section > aside > span{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
+header > section > aside{/* margin:0 0 0 14em; */}
+header > section > aside > h1{ color:red; float: right; display:inline; width:70%; font-family: 'Comfortaa', cursive; font-size: 3.1em; color:#FFF; margin:.2em 0 0 0; background: rgba(0, 0, 0, 0.2); padding:.5em}
+ header > section > aside > h1 > span{ font-size:.35em; display:block;} 
 /* header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;} */
 
-.timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 4em; /* 	padding:.7em 0 */}
+.timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 4em; }
 .timelineCont ul li{margin:.8em 4em .8em .8em;padding:1em;background:#FFF;border-radius:5px; border: 1px solid #FFF;}
 .timelineCont ul li:before{content:'';height:15px;width:15px;border-radius:50%;background:#d4d4d4;border:2px solid #FFF;position:absolute;margin-left: -5.7em;box-shadow: 0 0 3px #fff;}
-.timelineCont ul li:hover{/* box-shadow:0 2px 4px 0 rgba(66, 100, 210, .2); background: rgba(66, 100, 210, .1) */}
+.timelineCont ul li:hover{}
 .timelineCont ul li:hover:before{background: #4264d2;}
 
 .timelineCont ul > li:first-child:before{visibility: hidden; display:none; }
@@ -43,7 +52,7 @@ header > section > div{background:url(../images/profilepic.jpg); background-size
 .timelineCont ul > li:last-child:before{visibility: hidden; display:none;}
 .timelineCont ul > li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
 
-footer{height:12em;background:#333; border-top: 4px solid #f4f4f4;}
+footer{height:12em;background:#333; color:#FFF; padding:.5em;}
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (max-width: 480px) {
