multi device support fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,11 @@ header{padding:6em 4em; background:url(../images/bgimg.jpg) ;background-size:cov
 header > section { text-align: left; }
 header > section > aside > span{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
 header > section > aside{/* margin:0 0 0 14em; */}
-header > section > aside > h1{ color:red; float: right; display:inline; width:70%; font-family: 'Merriweather', serif; font-size: 3.1em; color:#FFF; margin:.2em 0 0 0; background: rgba(0, 0, 0, 0.3); padding:.5em}
+header > section > aside > h1{ float: right; display:inline; width:75%; font-family: 'Merriweather', serif; font-size: 3.1em; color:#FFF; background: rgba(0, 0, 0, 0.3); padding:.5em}
  header > section > aside > h1 > span{ font-size:.35em; display:block; font-family: 'Open Sans', sans-serif;} 
 /* header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;} */
 
-.timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 4em; }
+.timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 8em; }
 .timelineCont ul li{margin:.8em 4em .8em .8em;padding:1em;background:#FFF;border-radius:5px; border: 1px solid #FFF;}
 .timelineCont ul li:before{content:'';height:15px;width:15px;border-radius:50%;background:#d4d4d4;border:2px solid #FFF;position:absolute;margin-left: -5.75em;box-shadow: 0 0 3px #fff;}
 .timelineCont ul li:hover{}
@@ -52,18 +52,41 @@ header > section > aside > h1{ color:red; float: right; display:inline; width:70
 .timelineCont ul > li:last-child:before{visibility: hidden; display:none;}
 .timelineCont ul > li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
 
+.timelineCont ul li span{font-weight:bold; margin-left:-10em; position: absolute;}
+.timelineCont ul li:hover span{color:#4264d2;/* text-shadow: 3px 2px #fff; */}
+
 footer{height:12em;background:#333; color:#FFF; padding:.5em; margin: 0 0 4em 0;}
 
 /* Media queries-------------------------------------------------------------------------------*/
+@media screen and (min-width: 960px) {
+}
+
+@media screen and (max-width: 960px) {
+	main{margin:0 auto; width:100%}
+	header > section > aside > h1{width: 71%; font-size:2.8em;background: rgba(0, 0, 0, 0.1);}
+	header > section > aside > h1 > span{font-size:.5em;}
+	footer{margin: 0}
+}
+
+@media screen and (max-width: 768px) {
+	header{padding: 4em 2em} 
+	header > section > aside > h1{font-size: 2.3em;float:right; width: 68%; margin:.8em 0 0 0}
+	
+	
+}
 @media screen and (max-width: 480px) {
-	header{padding: 4em 2em}
 	header > section > aside{margin: 0;}
 	header > section > aside > span{display:none} 
-	header > section > aside > h1{font-size: 1em;}
+	header > section > aside > h1{font-size: 2.3em; float: none; clear: both; display: block; width: auto; margin: 0;}
+	
+	.timelineCont ul{padding-left:.3em;margin: 0 0 0 1.5em;}
+	.timelineCont ul li{ margin:1.4em 1em 1.4em .8em; padding:.9em}
+	.timelineCont ul li span{ margin-left:0em; display: block; position: relative; }
+	.timelineCont ul li:before{ margin-left:-2.8em ; }	
 }
-/* Large screen */
-@media screen and (min-width: 960px) {
-	header > section > aside > h1{width:81%; margin:.6em 0 0 0;}
+
+@media screen and (max-width: 320px) {	
+	
 }
 
 /* Print styles-------------------------------------------------------------------------------*/
