--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ header{padding:6em 4em; background:url(../images/bgimg.jpg) ;background-size:cov
 header > section { text-align: left; }
 header > section > aside > span{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
 header > section > aside{/* margin:0 0 0 14em; */}
-header > section > aside > h1{ float: right; display:inline; width:75%; font-family: 'Merriweather', serif; font-size: 3.1em; color:#FFF; background: rgba(0, 0, 0, 0.3); padding:.5em}
+header > section > aside > h1{ float: right; display:inline; width:80%; font-family: 'Merriweather', serif; font-size: 3.1em; color:#FFF; background: rgba(0, 0, 0, 0.3); padding:.5em; margin:.4em 0 0 0; }
  header > section > aside > h1 > span{ font-size:.35em; display:block; font-family: 'Open Sans', sans-serif;} 
 /* header > section > div > div{background:#CCC;width:10em;height:10em;border-radius:50%;} */
 
@@ -59,6 +59,7 @@ footer{height:12em;background:#333; color:#FFF; padding:.5em; margin: 0 0 4em 0;
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (min-width: 960px) {
+	header > section > aside > h1{width: 75%;float:right; margin: 0;}
 }
 
 @media screen and (max-width: 960px) {
