large screen more 1280px width fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,8 @@ header > section > aside > h1{ float: right; display:inline; width:80%; font-fam
 footer{height:12em;background:#333; color:#FFF; padding:.5em; margin: 0 0 4em 0;}
 
 /* Media queries-------------------------------------------------------------------------------*/
-@media screen and (max-width: 1024px) {
-	header > section > aside > h1{width: 75%;float:right; margin: 0;}
+@media screen and (min-width: 1024px) {
+	header > section > aside > h1{width: 80%;float:right;}
 }
 
 @media screen and (max-width: 960px) {
