--- a/css/reset.css
+++ b/css/reset.css
@@ -102,4 +102,7 @@ input[type=button] {width: auto; overflow: visible;}
 */
 
 /* let's clear some floats */
-.clearfix:after { content: " "; display: block; clear: both; }
+/* .clearfix:after { content: " "; display: block; clear: both; } */
+.clearfix:after {visibility:hidden;display:block;font-size:0;content:" ";clear:both;height: 0;}
+* html .clearfix {zoom:1;} /* IE6 */
+*:first-child+html .clearfix{zoom:1;} /* IE7 */
