--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ font-family: 'Open Sans', sans-serif;
  */
 
 /* A Linux- and Windoews-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
-body {font: 13px 'Open Sans', sans-serif; background:url(../images/overlay.png) #e8e9e9;}
+body {font:13px 'Open Sans', sans-serif;background:url(../images/overlay.png) #e8e9e9;}
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
 /* We like off-black for text. */
@@ -33,11 +33,12 @@ blockquote {padding: 16px; background: #eee;}
 main{width:90%;background:#f4f4f4; margin:20px auto; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
 header{padding:6em 4em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
-header > section { text-align: left; }
-header > section > aside > span{background:url(../images/profilepic.jpg); background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
+header > section {}
+header > section > aside > span{background:url(../images/profilepic.jpg);background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
 header > section > aside{}
-header > section > aside > h1{float:right;display:inline;width:75%;font-family:'Merriweather',serif;font-size:3.1em;color:#FFF;background:rgba(0, 0, 0, 0.3);padding:.5em; margin:.4em 0 0 0; }
- header > section > aside > h1 > span{ font-size:.35em; display:block; font-family: 'Open Sans', sans-serif;} 
+header > section > aside > h1{float:right;display:inline;width:75%;font-family:'Merriweather',serif;font-size:3.1em;color:#FFF;background:rgba(0, 0, 0, 0.3);padding:.5em;text-shadow:1px 0px #000;}
+header > section > aside > h1 > span{font-size:.35em;display:block;font-family:'Open Sans', sans-serif;} 
+header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-family:'Open Sans', sans-serif;}
 
 
 .timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 8em; }
@@ -52,27 +53,27 @@ header > section > aside > h1{float:right;display:inline;width:75%;font-family:'
 .timelineCont ul li:last-child:before{visibility: hidden; display:none;}
 .timelineCont ul li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
 
-.timelineCont ul li span{font-weight:bold; margin-left:-10em; position: absolute;}
+.timelineCont ul li span{font-weight:bold;margin-left:-10em; position: absolute;}
 .timelineCont ul li:hover span{color:#4264d2;}
 
-.timelineCont ul li ul { clear:both; margin: 1em 0 0; padding: 0;border: none;}
+.timelineCont ul li ul {clear:both;margin:1em 0 0;padding:0;border:none;}
 .timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin: .1em 0 .1em 3em; padding: 0;}
-.timelineCont ul li ul li:before{clear:both; margin: 0; padding: 0; display:none}
+.timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none}
 
-footer{height:12em;background:#333; color:#FFF; padding:.5em; margin: 0 0 4em 0;}
+footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;}
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (min-width: 1280px) {
-	header > section > aside > h1{ width: 82%;}
+	header > section > aside > h1{width: 82%;}
 }
 
 @media screen and (max-width: 1024px) {
-	 header > section > aside > h1{ width: 75%; margin: 0;} 
+	 header > section > aside > h1{width: 75%;} 
 }
 
 @media screen and (max-width: 960px) {
-	main{margin:0 auto; width:100%}
-	header > section > aside > h1{font-size:2.8em;margin: 0; width: 70%;}
+	main{margin:0 auto;width:100%}
+	header > section > aside > h1{font-size:2.8em;width: 70%;}
 	header > section > aside > h1 > span{font-size:.5em;}
 	footer{margin: 0}
 }
@@ -91,10 +92,10 @@ footer{height:12em;background:#333; color:#FFF; padding:.5em; margin: 0 0 4em 0;
 	header > section > aside > span{display:none} 
 	header > section > aside > h1{float: none; clear: both; display: block; width: auto; margin: 0;}
 	
-	.timelineCont ul{padding-left:.3em;margin: 0 0 0 1.5em;}
-	.timelineCont ul li{ margin:1.4em 1em 1.4em .8em; padding:.9em}
-	.timelineCont ul li span{ margin-left:0em; display: block; position: relative; padding-bottom: .4em; font-size: 1.2em; }
-	.timelineCont ul li:before{ margin-left:-2.8em ; }	
+	.timelineCont ul{padding-left:.3em;margin:0 0 0 1.5em;}
+	.timelineCont ul li{ margin:1.4em 1em 1.4em .8em;padding:.9em}
+	.timelineCont ul li span{margin-left:0em;display:block;position:relative;padding-bottom:.4em;font-size:1.2em;}
+	.timelineCont ul li:before{margin-left:-2.8em;}	
 }
 
 @media screen and (max-width: 320px) {
