--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin: .1em 0 .1em 3em; padding: 0;}
 .timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none}
 
-footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;}
+footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0; text-align: left;}
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (min-width: 1280px) {
@@ -104,8 +104,8 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;}
 
 /* Print styles-------------------------------------------------------------------------------*/
 @media print {
-	@page{margin:0 .25cm .25cm;}
-	@page :first{margin:.5cm .25cm .25cm;}
+	@page{margin:0 }
+	@page :first{margin:.5cm 0 0 0;}
 	body{ margin: 0; padding: 0; }
 	a:after {content: " [" attr(href) "] ";}
 	main{width:100%; margin:0; box-shadow:none}
@@ -113,7 +113,8 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;}
 	header > section > aside > span{display:none;}
 	header > section > aside > h1{float:none;clear:both;display:block;width:auto;margin:0;background:none;color:#333;}
 	.timelineCont ul li {page-break-inside: avoid;}
-	footer{border:none;border-top:5px solid #dfe5e6;background:none;color:#333;margin:0;}
 	.timelineCont ul li:hover:before{background:#d4d4d4;}
 	.timelineCont ul li:hover span{color:#333;}
+	footer{border-top:5px solid #dfe5e6;border-bottom:1px solid #ccc;background:none;color:#333;margin:0;}
+	footer:after {content:"Yours Truly";margin-top:0;padding:5cm 1cm;font-style:italic;}
 }
