--- a/css/styles.css
+++ b/css/styles.css
@@ -53,12 +53,13 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li:last-child:before{visibility: hidden; display:none;}
 .timelineCont ul li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
 
-.timelineCont ul li span{font-weight:bold;margin-left:-12em; position: absolute; width:65px; text-align: center;}
+.timelineCont ul li span{font-weight:bold;margin-left:-12em; position: absolute; width:65px; text-align: right;}
+.timelineCont ul li span b{display:none;visibility:hidden;}
 .timelineCont ul li:hover span{color:#4264d2;}
 
 .timelineCont ul li ul {clear:both;margin:1em 0 0;padding:0;border:none;}
 .timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin: .1em 0 .1em 3em; padding: 0;}
-.timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none}
+.timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none;}
 
 footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0; text-align: left;}
 
@@ -94,9 +95,10 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0; tex
 	
 	.timelineCont ul{padding-left:.3em;margin:0 0 0 1.5em;}
 	.timelineCont ul li{ margin:1.4em 1em 1.4em .8em;padding:.9em}
-	.timelineCont ul li span{margin-left:0em;display:block;position:relative;padding-bottom:.4em;font-size:1.2em;}
+	.timelineCont ul li span{margin-left:0em;display:block;position:relative;padding-bottom:.4em;font-size:1.2em;text-align:left;width:auto;}
+	.timelineCont ul li span b{display:inline; visibility:visible;}
 	.timelineCont ul li:before{margin-left:-2.8em;}	
-}
+} 
 
 @media screen and (max-width: 320px) {
 
