--- a/css/styles.css
+++ b/css/styles.css
@@ -7,58 +7,57 @@ font-family: 'Open Sans', sans-serif;
  */
 
 /* A Linux- and Windoews-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
-body {font:13px 'Open Sans', sans-serif;background:url(../images/overlay.png) #e8e9e9;}
+body{font:13px 'Open Sans', sans-serif;background:url(../images/overlay.png) #e8e9e9;}
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
 /* We like off-black for text. */
-body, select, input, textarea {color: #333;}
-a {color: #03f;}
-a:hover {color: #69f;}
+body,select,input,textarea{color:#333;}
+a{color:#03f;}
+a:hover{color:#69f;}
 /* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #4264d2; color: #fff; text-shadow: none;}
-::selection {background: #4264d2; color: #fff; text-shadow: none;}
+::-moz-selection{background:#4264d2;color:#fff;text-shadow:none;}
+::selection{background:#4264d2;color:#fff;text-shadow:none;}
 
 /*	j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;}
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
+a:link{-webkit-tap-highlight-color:#fcd700;}
+ins{background-color:#fcd700;color:#000;text-decoration:none;}
+mark{background-color:#fcd700;color:#000;font-style:italic;font-weight:bold;}
 
 /* Mozilla dosen't style placeholders by default */
-input:-moz-placeholder { color:#a9a9a9; }
-textarea:-moz-placeholder { color:#a9a9a9; }
+input:-moz-placeholder{color:#a9a9a9;}
+textarea:-moz-placeholder{color:#a9a9a9;}
 
 /* let's give blockquotes *some* default styling, because unstyled blockquotes are dangerous */
-blockquote {padding: 16px; background: #eee;}
+blockquote{padding:16px;background:#eee;}
 
-main{width:90%;background:#f4f4f4; margin:20px auto; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
+main{width:90%;background:#f4f4f4;margin:20px auto;box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
-header{padding:6em 4em; background:url(../images/bgimg.jpg) ;background-size:cover;background-repeat: no-repeat;}
+header{padding:6em 4em;background:url(../images/bgimg.jpg);background-size:cover;background-repeat:no-repeat;}
 header > section {}
 header > section > aside > span{background:url(../images/profilepic.jpg);background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} 
 header > section > aside{}
 header > section > aside > h1{float:right;display:inline;width:75%;font-family:'Merriweather',serif;font-size:3.1em;color:#FFF;background:rgba(0, 0, 0, 0.3);padding:.5em;text-shadow:1px 0px #000;}
-header > section > aside > h1 > span{font-size:.35em;display:block;font-family:'Open Sans', sans-serif;text-transform:uppercase;}
-header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-family:'Open Sans', sans-serif;}
+header > section > aside > h1 > span{font-size:.35em;display:block;font-family:'Open Sans',sans-serif;text-transform:uppercase;}
+header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-family:'Open Sans',sans-serif;}
 
-
-.timelineCont ul {border-left: 5px solid #dfe5e6; margin: 0 0 0 8em; }
-.timelineCont ul li{margin:.8em 4em .8em .8em;padding:1em;background:#FFF;border-radius:5px; border: 1px solid #FFF;}
+.timelineCont ul{border-left:5px solid #dfe5e6;margin:0 0 0 8em;}
+.timelineCont ul li{margin:.8em 4em .8em .8em;padding:1em;background:#FFF;border-radius:5px;min-height:35px;}
 .timelineCont ul li:before{content:'';height:15px;width:15px;border-radius:50%;background:#d4d4d4;border:2px solid #FFF;position:absolute;margin-left: -5.75em;box-shadow: 0 0 3px #fff;}
 .timelineCont ul li:hover{}
-.timelineCont ul li:hover:before{background: #4264d2;}
+.timelineCont ul li:hover:before{background:#4264d2;}
 
-.timelineCont ul li:first-child:before{visibility: hidden; display:none; }
-.timelineCont ul li:first-child{margin:0em 4em .7em .7em ;background:transparent; padding:0 1em 1em 1em;border: none;}
+.timelineCont ul li:first-child:before{visibility:hidden;display:none;}
+.timelineCont ul li:first-child{margin:0em 4em .7em .7em ;background:transparent;padding:0 1em 1em 1em;border:none;}
 
-.timelineCont ul li:last-child:before{visibility: hidden; display:none;}
-.timelineCont ul li:last-child{margin:.7em 4em 0em .7em ;background:transparent; padding:1em 1em 0 1em;border: none;}
+.timelineCont ul li:last-child:before{visibility:hidden;display:none;}
+.timelineCont ul li:last-child{margin:.7em 4em 0em .7em;background:transparent;padding:1em 1em 0 1em;border:none;}
 
-.timelineCont ul li span{font-weight:bold;margin-left:-12em; position: absolute; width:65px; text-align: right;}
+.timelineCont ul li span{font-weight:bold;margin-left:-12em;position:absolute;width:65px;text-align:right;}
 .timelineCont ul li span b{display:none;visibility:hidden;}
 .timelineCont ul li:hover span{color:#4264d2;}
 
-.timelineCont ul li ul {clear:both;margin:1em 0 0;padding:0;border:none;}
-.timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin: .1em 0 .1em 3em; padding: 0;}
+.timelineCont ul li ul{clear:both;margin:1em 0 0;padding:0;border:none;}
+.timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin:.1em 0 .1em 3em;padding:0;}
 .timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none;}
 
 footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text-align:center;}
@@ -74,24 +73,24 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text
 
 @media screen and (max-width: 960px) {
 	main{margin:0 auto;width:100%}
-	header > section > aside > h1{font-size:2.6em;width: 70%;}
+	header > section > aside > h1{font-size:2.6em;width:70%;}
 	header > section > aside > h1 > span{font-size:.5em;}
-	footer{margin: 0}
+	footer{margin:0}
 }
 
 @media screen and (max-width: 768px) {
 	header{padding: 4em 2em} 
-	header > section > aside > h1{font-size: 2.3em; width: 71%;}	
+	header > section > aside > h1{font-size:2.3em;width:71%;}	
 }
 
 @media screen and (max-width: 568px) {
-	header > section > aside > h1{font-size: 2.1em;width: 65%; margin: .4em 0 0 0;}
+	header > section > aside > h1{font-size:2.1em;width:65%;margin:.4em 0 0 0;}
 }
 
 @media screen and (max-width: 480px) {
 	header > section > aside{margin: 0;}
 	header > section > aside > span{display:none} 
-	header > section > aside > h1{float: none; clear: both; display: block; width: auto; margin: 0;}
+	header > section > aside > h1{float:none;clear:both;display:block;width:auto;margin:0;}
 	
 	.timelineCont ul{padding-left:.3em;margin:0 0 0 1.5em;}
 	.timelineCont ul li{ margin:1.4em 1em 1.4em .8em;padding:.9em}
@@ -109,18 +108,18 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text
 	@page{margin:0;}
 	@page :first{margin:.5cm 0 0 0;}
 	
-	body{ margin: 0; padding: 0; }
+	body{margin:0;padding:0;}
 	a:after {content: " [" attr(href) "] ";}
-	main{width:100%; margin:0; box-shadow:none}
+	main{width:100%;margin:0;box-shadow:none;}
 	
-	header{margin:0;padding:0;color:#000;opacity:1;border-bottom:5px solid #dfe5e6;background: none;}
+	header{margin:0;padding:0;color:#000;opacity:1;border-bottom:5px solid #dfe5e6;background:none;}
 	header > section > aside > span{display:none;}
 	header > section > aside > h1{float:none;clear:both;display:block;width:auto;margin:0;background:none;color:#333;}
 	
-	.timelineCont ul li {page-break-inside: avoid;}
+	.timelineCont ul li{page-break-inside:avoid;}
 	.timelineCont ul li:hover:before{background:#d4d4d4;}
 	.timelineCont ul li:hover span{color:#333;}
 	
 	footer{border-top:5px solid #dfe5e6;background:none;margin:0;padding:1cm 2cm 2cm;font-style:italic;}
-	footer:after {color:#dfe5e6;font-size:.8em; margin-top:.8em; display:block; content:"Contact me at email@emaildomain.com for any clarification or further details";}
+	footer:after{color:#dfe5e6;font-size:.8em;margin-top:.8em;display:block;content:"Contact me at email@emaildomain.com for any clarification or further details";}
 }
