--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li:hover span{color:#4264d2;}
 
 .timelineCont ul li ul{clear:both;margin:1em 0 0;padding:0;border:none;}
-.timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin:.1em 0 .1em 3em;padding:0;}
+.timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin:.1em 0 .1em 3em;padding:0;min-height:auto;}
 .timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none;}
 
 footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text-align:center;}
