UL LI:last child min height fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li:first-child{margin:0em 4em .7em .7em ;background:transparent;padding:0 1em 1em 1em;border:none;min-height:auto;}
 
 .timelineCont ul li:last-child:before{visibility:hidden;display:none;}
-.timelineCont ul li:last-child{margin:.7em 4em 0em .7em;background:transparent;padding:1em 1em 0 1em;border:none;}
+.timelineCont ul li:last-child{margin:.7em 4em 0em .7em;background:transparent;padding:1em 1em 0 1em;border:none;min-height:auto;}
 
 .timelineCont ul li span{font-weight:bold;margin-left:-12em;position:absolute;width:65px;text-align:right;}
 .timelineCont ul li span b{display:none;visibility:hidden;}
