--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ font-family: 'Merriweather', serif;
 font-family: 'Open Sans', sans-serif;
  */
 
-/* A Linux- and Windoews-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
+/* A Linux- and Windows-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
 body{font:13px 'Open Sans', sans-serif;background:url(../images/overlay.png) #e8e9e9;}
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
@@ -49,7 +49,7 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li:first-child:before{visibility:hidden;display:none;}
 .timelineCont ul li:first-child{margin:0em 4em .7em .7em ;background:transparent;padding:2.5em 1em;border:none;min-height:auto;}
 
-.timelineCont ul li h3{ font-size: 1.5em; margin-bottom: .5em;}
+.timelineCont ul li h3{font-size:1.5em;margin-bottom:.5em;font-weight:bold;}
 
 .timelineCont ul li:last-child:before{visibility:hidden;display:none;}
 .timelineCont ul li:last-child{margin:.7em 4em 0em .7em;background:transparent;padding:1em 1em 0 1em;border:none;min-height:auto;}
