--- a/css/styles.css
+++ b/css/styles.css
@@ -32,12 +32,11 @@ blockquote{padding:16px;background:#eee;}
 
 main{width:90%;background:#f4f4f4;margin:20px auto;box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.1);}
 
-header{padding:6em 4em;background:url(../images/bgimg.jpg);background-size:cover;background-repeat:no-repeat;}
+header{padding:8vmin;background:url(../images/bgimg.jpg);background-size:cover;background-repeat:no-repeat;}
 header > section {}
-/*Replace the gravatar image path*/
-header > section > aside > span{background:url(https://secure.gravatar.com/avatar/88b98081dc4f42c05a799b59c165306f?s=200);background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} /*profilepic.jpg can be replaced with your profile images OR any images hosted online e.g GRAVATAR (Sample image URL : https://s.gravatar.com/avatar/88b98081dc4f42c05a799b59c165306f?s=128 )*/
+header > section > aside > span{background:url(../images/profilepic.jpg);background-size:cover;width:12em;height:12em;border-radius:50%;display:inline-block;} /*profilepic.jpg can be replaced with your profile images OR any images hosted online e.g GRAVATAR (Sample image URL : https://s.gravatar.com/avatar/88b98081dc4f42c05a799b59c165306f?s=128 )*/
 header > section > aside{}
-header > section > aside > h1{float:right;display:inline;width:75%;font-family:'Merriweather',serif;font-size:3.1em;color:#FFF;background:rgba(0, 0, 0, 0.3);padding:.5em;text-shadow:1px 0px #000;}
+header > section > aside > h1{float:right;display:inline;width:75%;font-family:'Merriweather',serif;font-size:3.1em;color:#FFF;background:rgba(0, 0, 0, 0.3);padding:.3em;text-shadow:1px 0px #000;}
 header > section > aside > h1 > span{font-size:.35em;display:block;font-family:'Open Sans',sans-serif;text-transform:uppercase;}
 header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-family:'Open Sans',sans-serif;}
 
@@ -56,14 +55,15 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li:last-child{margin:.7em 4em 0em .7em;background:transparent;padding:1em 1em 0 1em;border:none;min-height:auto;}
 
 .timelineCont ul li span{font-weight:bold;margin-left:-12em;position:absolute;width:65px;text-align:right;}
-.timelineCont ul li span b{display:none;visibility:hidden;}
 .timelineCont ul li:hover span{color:#4264d2;}
 
 .timelineCont ul li ul{clear:both;margin:1em 0 0;padding:0;border:none;}
 .timelineCont ul li ul li, .timelineCont ul li ul li:first-child, .timelineCont ul li ul li:last-child{list-style:disc;margin:.1em 0 .1em 3em;padding:0;min-height:auto;}
 .timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none;}
 
-footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text-align:center;}
+footer{height:8em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text-align:center;}
+footer a {color:#FFF; text-decoration: none; font-weight: bold;}
+footer div{color:#666;}
 
 /* Media queries-------------------------------------------------------------------------------*/
 @media screen and (min-width: 1280px) {
@@ -76,7 +76,7 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text
 
 @media screen and (max-width: 960px) {
 	main{margin:0 auto;width:100%}
-	header > section > aside > h1{font-size:2.6em;width:70%;}
+	header > section > aside > h1{font-size:2.6em;width:75%;}
 	header > section > aside > h1 > span{font-size:.5em;}
 	footer{margin:0}
 }
@@ -107,7 +107,7 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text
 
 /* Print styles-------------------------------------------------------------------------------*/
 @media print {
-	@page{margin:.8cm ;}
+	@page{margin:0 0 0 0;}
 	@page :first{margin:.5cm 0 0 0;}
 	
 	body{margin:0;padding:0;background:none;}
@@ -116,12 +116,13 @@ footer{height:12em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text
 	
 	header{margin:0;padding:0;color:#000;opacity:1;border-bottom:5px solid #dfe5e6;background:none;}
 	header > section > aside > span{display:none;}
-	header > section > aside > h1{float:none;clear:both;display:block;width:auto;margin:0;background:none;color:#333;}
+	header > section > aside > h1{float:none;clear:both;display:block;width:auto;margin:0 0 0 .3em;background:none;color:#333;}
 	
 	.timelineCont ul li{page-break-inside:avoid;background:none;}
 	.timelineCont ul li:hover:before{background:#d4d4d4;}
 	.timelineCont ul li:hover span{color:#333;}
 	
 	footer{border-top:5px solid #dfe5e6;background:none;margin:0;padding:1cm 2cm 2cm;color:#333;}
+	footer a{ font-weight: normal;color:#333; }
 	footer:after{color:#666;font-size:.8em;font-style:italic;margin-top:.8em;display:block;content:"Contact me at email@emaildomain.com for any clarification or further details";}
 }
