--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ header > section > aside > h1 > section{margin:.8em 0 0;font-size:.35em;font-fam
 .timelineCont ul li ul li:before{clear:both;margin:0;padding:0;display:none;}
 
 footer{height:8em;background:#333;color:#FFF;padding:.5em;margin:0 0 4em 0;text-align:center;}
-footer a {color:#FFF; text-decoration: none; font-weight: bold;}
+footer a {color:#FFF; text-decoration: none;}
 footer div{color:#666;}
 
 /* Media queries-------------------------------------------------------------------------------*/
